Refactored MiniAapt to use java8 functional functionality instead of depending on guava FluentIterables
Summary: See commit message

Test Plan: All tests still pass for changed files

Reviewed By: asp2insp

fbshipit-source-id: f1c125a